--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,9 +11,8 @@ $secondaryLight: lighten($secondary, 10%);
 $green: #52ce9c;
 $red: #d20000;
 
-$bg: #e5e5e5;
-$white: #fff;
-$black: #000;
+$bg-light: #e5e5e5;
+$bg-dark: #000;
 
 $blackLight: lighten($black, 80%);
 
