--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,7 @@ $red: #d20000;
 $bg-light: #e5e5e5;
 $bg-dark: #000;
 
-$blackLight: lighten($black, 80%);
+$blackLight: lighten(black, 80%);
 
 // SIZES
 $desktop: 900px;
