--- a/src/components/moods/moods.scss
+++ b/src/components/moods/moods.scss
@@ -1,6 +1,20 @@
+@import "../../styles/presets";
+@import "../../styles/hovers";
+
 #moods {
-  background-color: gray;
   position: absolute;
+  height: 100vh;
+  width: 20vw;
   top: 0;
   left: 0;
+  text-align: center;
+
+  .mood {
+    @extend .bg-white;
+    @extend .box-shadow;
+    @extend .circular-border;
+    @extend .default-padding;
+    @extend .default-margin;
+    @extend .clickable;
+  }
 }
