--- a/src/components/bottom-indicator/bottom-indicator.scss
+++ b/src/components/bottom-indicator/bottom-indicator.scss
@@ -1,7 +1,11 @@
+@import "../../styles/presets";
+
 #bottom-indicator {
   position: absolute;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   color: white;
-  background-color: black;
+  background-color: rgba(black, 0.8);
+  text-align: center;
+  padding: 8px 0;
 }
