--- a/src/components/moods/moods.scss
+++ b/src/components/moods/moods.scss
@@ -10,6 +10,7 @@
   top: 0;
 
   #moods {
+    overflow: auto;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -18,6 +19,8 @@
     width: 100vw;
     top: 0;
     left: 0;
+
+    scrollbar-color: rgba($blackLight, 0.6) transparent;
 
     @include desktop {
       max-width: 400px;
