--- a/src/components/moods/moods.scss
+++ b/src/components/moods/moods.scss
@@ -9,6 +9,13 @@
   width: 100vw;
   top: 0;
 
+  .mute-button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-right: 16px;
+  }
+
   #moods {
     overflow: auto;
     position: absolute;
@@ -25,6 +32,7 @@
     @include desktop {
       max-width: 400px;
     }
+
     .mood {
       width: 80%;
       min-width: 250px;
