--- a/src/styles/_presets.scss
+++ b/src/styles/_presets.scss
@@ -33,8 +33,18 @@
   color: $red;
 }
 
-.button-primary {
-  background-color: $primary;
+.icon {
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(216deg)
+    brightness(101%) contrast(102%);
+  padding: 8px;
+  height: 24px;
+  width: 24px;
+
+  @include mobile {
+    padding: 6px;
+    height: 18px;
+    width: 18px;
+  }
 }
 
 .no-select {
