--- a/src/components/misc/loader/loader.scss
+++ b/src/components/misc/loader/loader.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/presets";
 
 .loader-container {
-  margin: 0.6em;
+  margin: 0 8px;
 }
 
 .loader {
@@ -16,11 +16,11 @@
 
 .mini-loader {
   display: inline-block;
-  border: 0.3em solid $blackLight;
-  border-top: 0.3em solid white;
+  border: 4px solid $blackLight;
+  border-top: 4px solid white;
   border-radius: 100%;
-  width: 0.8em;
-  height: 0.8em;
+  width: 0.4em;
+  height: 0.4em;
   animation: spin 1s linear infinite;
 }
 
