--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@ $green: #52ce9c;
 $red: #d20000;
 
 $bg-light: #e5e5e5;
-$bg-dark: #000;
+$bg-dark: rgb(136, 136, 136);
 
 $blackLight: lighten(black, 80%);
 
