add user profile

--- a/src/components/bottom-indicator/bottom-indicator.scss
+++ b/src/components/bottom-indicator/bottom-indicator.scss
@@ -8,7 +8,7 @@
   bottom: 0;
   width: 100%;
   color: white;
-  background-color: rgba(black, 0.8);
+  background-color: $translucentBlack;
   text-align: center;
   padding: 8px 0;
 }
