--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,5 +16,7 @@ $bg-dark: rgb(136, 136, 136);
 
 $blackLight: lighten(black, 80%);
 
+$translucentBlack: rgba(black, 0.8);
+
 // SIZES
 $desktop: 900px;
