--- a/src/components/controls/controls.scss
+++ b/src/components/controls/controls.scss
@@ -1,15 +1,15 @@
 @import "../../styles/presets";
 
 #controls {
+  display: flex;
   position: fixed;
   top: 0;
   right: 0;
-  background-color: black;
+  background-color: $translucentBlack;
   color: white;
 
   z-index: 1;
 
   border-radius: 0 0 0 20px;
-
-  @extend .default-padding;
+  padding: 0 20px;
 }
