--- a/src/components/misc/action-button/action-button.scss
+++ b/src/components/misc/action-button/action-button.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   display: flex;
   align-items: center;
-  background-color: black;
+  background-color: transparent;
 
   z-index: 1;
 
