--- a/src/styles/_keyframes.scss
+++ b/src/styles/_keyframes.scss
@@ -1,8 +1,11 @@
-@keyframes popUp {
-  from {
-    transform: scale(0.5);
+@keyframes bounce-pop {
+  0% {
+    transform: scale(0.8);
   }
-  to {
+  90% {
+    transform: scale(1.04);
+  }
+  100% {
     transform: scale(1);
   }
 }
