--- a/src/components/misc/icon-button/icon-button.scss
+++ b/src/components/misc/icon-button/icon-button.scss
@@ -1,18 +1,19 @@
 @import "../../../styles/presets";
 @import "../../../styles/hovers";
 
-.action-button {
+.icon-button {
   justify-content: center;
   display: flex;
   align-items: center;
   background-color: transparent;
+  color: white;
 
   z-index: 1;
 
-  .icon {
-    color: red;
-  }
-
   @extend .clickable;
   @extend .rounded-border;
+
+  .button-icon {
+    @extend .icon;
+  }
 }
