--- a/src/components/misc/loader/loader.scss
+++ b/src/components/misc/loader/loader.scss
@@ -7,7 +7,7 @@
 .loader {
   margin: 4em auto;
   border: 1em solid #f2f2f2;
-  border-top: 1em solid $primaryLighter;
+  border-top: 1em solid $primaryLight1;
   border-radius: 50%;
   width: 90px;
   height: 90px;
