--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,10 @@
 // COLORS
-$primary: #4a4677;
-$secondary: #7e67ba;
+$primary: #106e94;
+$secondary: #11496c;
 
 $primaryLight: lighten($primary, 10%);
-$primaryLighter: lighten($primary, 20%);
-$primaryLightest: lighten($primary, 30%);
+$primaryLight1: lighten($primary, 20%);
+$primaryLight2: lighten($primary, 30%);
 
 $secondaryLight: lighten($secondary, 10%);
 
