--- a/src/components/misc/input-field/input-field.scss
+++ b/src/components/misc/input-field/input-field.scss
@@ -16,6 +16,7 @@
     border: 1px solid $blackLight;
     width: 100%;
     box-sizing: border-box;
+    text-align: center;
 
     @extend .rounded-border;
   }
