--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $secondaryLight: lighten($secondary, 10%);
 $green: #52ce9c;
 $red: #d20000;
 
-$bg-light: #e5e5e5;
+$bg-light: #f0f0f0;
 $bg-dark: rgb(136, 136, 136);
 
 $blackLight: lighten(black, 80%);
