add update display name

--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -84,13 +84,24 @@
           }
 
           .user-name {
+            display: flex;
+            align-items: center;
             text-transform: capitalize;
-            color: $primary;
+            background-color: $primary;
+            color: white;
             font-weight: bold;
             word-break: break-all;
+            padding: 8px 12px;
+
+            @extend .circular-border;
 
             @include mobile {
               padding: 8px;
+            }
+
+            .icon {
+              @extend .clickable;
+              @extend .icon;
             }
           }
 
