--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -29,8 +29,6 @@
   @extend .default-padding;
 
   .profile-card {
-    padding: 32px;
-
     .logout {
       background-color: $secondary;
       margin: 24px auto;
@@ -55,13 +53,33 @@
       }
 
       .user-image {
-        width: 100px;
-        height: 100px;
-        border-radius: 100%;
-        border: 4px solid $secondary;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 120px;
+        height: 120px;
+        position: relative;
 
         @extend .default-margin;
-        @extend .box-shadow;
+
+        .image {
+          width: 100px;
+          height: 100px;
+          border-radius: 100%;
+          border: 4px solid $secondary;
+          background-color: $secondary;
+        }
+
+        .edit {
+          height: 40px;
+          width: 40px;
+          position: absolute;
+          top: 0;
+          right: 0;
+          background-color: $secondary;
+          border-radius: 100%;
+          border: 2px solid white;
+        }
       }
 
       .user-details {
@@ -91,7 +109,7 @@
             color: white;
             font-weight: bold;
             word-break: break-all;
-            padding: 8px 12px;
+            padding: 8px 20px;
 
             @extend .circular-border;
 
