--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -63,6 +63,7 @@
         @extend .default-margin;
 
         .image {
+          object-fit: cover;
           width: 100px;
           height: 100px;
           border-radius: 100%;
