add livechat layout

--- a/src/components/controls/controls.scss
+++ b/src/components/controls/controls.scss
@@ -6,10 +6,13 @@
   top: 0;
   right: 0;
   background-color: $translucentBlack;
+  justify-content: space-around;
   color: white;
+  width: 100%;
+  max-width: 500px;
 
   z-index: 1;
 
-  border-radius: 0 0 0 20px;
+  border-radius: 0 0 0 $borderRadius;
   padding: 0 20px;
 }
