--- a/src/App.scss
+++ b/src/App.scss
@@ -5,4 +5,14 @@
   height: 100vh;
   width: 100vw;
   top: 0;
+
+  #parent {
+    display: flex;
+    justify-content: space-between;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+  }
 }
