--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,7 +16,8 @@ $bg-dark: rgb(136, 136, 136);
 
 $blackLight: lighten(black, 80%);
 
-$translucentBlack: rgba(black, 0.8);
+$translucentBlack: rgba(black, 0.95);
+$translucentBlack1: rgba(black, 0.8);
 $translucentBlack2: rgba(black, 0.6);
 $translucentBlack3: rgba(black, 0.4);
 $translucentGray: rgba(gray, 0.8);
