--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,19 @@
   width: 100vw;
   top: 0;
 
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgb(110, 110, 110);
+    border-radius: 20px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
   #parent {
     display: flex;
     justify-content: space-between;
