--- a/src/components/live-chat/live-chat.scss
+++ b/src/components/live-chat/live-chat.scss
@@ -7,6 +7,14 @@
   margin-top: 42px;
   background-color: transparent;
   position: relative;
+  box-sizing: border-box;
+  transition: 400ms;
+
+  @include mobile {
+    background-color: $translucentBlack3;
+    max-width: 100vw;
+    width: 100vw;
+  }
 
   #live-chat {
     background-color: $translucentBlack1;
