--- a/src/components/moods/moods.scss
+++ b/src/components/moods/moods.scss
@@ -6,13 +6,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 
   scrollbar-color: rgba($blackLight, 0.6) transparent;
 
   @include desktop {
     max-width: 400px;
+  }
+
+  @include mobile {
+    margin-top: 40px;
+    position: absolute;
+    overflow-x: auto;
+    min-height: 90vh;
   }
 
   .mood {
