--- a/src/styles/_keyframes.scss
+++ b/src/styles/_keyframes.scss
@@ -9,3 +9,12 @@
     transform: scale(1);
   }
 }
+
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
