add fetch from livechat

--- a/src/components/live-chat/live-chat.scss
+++ b/src/components/live-chat/live-chat.scss
@@ -74,7 +74,8 @@
         .image {
           height: 32px;
           width: 32px;
-          padding-right: 8px;
+          margin-right: 8px;
+          border-radius: 100%;
         }
 
         .message-block {
