--- a/src/components/misc/loader/loader.scss
+++ b/src/components/misc/loader/loader.scss
@@ -6,8 +6,8 @@
 
 .loader {
   margin: 4em auto;
-  border: 1em solid #f2f2f2;
-  border-top: 1em solid $primary;
+  border: 1em solid $bg-dark;
+  border-top: 1em solid white;
   border-radius: 50%;
   width: 90px;
   height: 90px;
