--- a/src/components/live-chat/live-chat.scss
+++ b/src/components/live-chat/live-chat.scss
@@ -112,6 +112,7 @@
       background-color: $secondary;
       width: 90%;
       height: 40px;
+      z-index: 0;
 
       @extend .clickable;
     }
