--- a/src/styles/_keyframes.scss
+++ b/src/styles/_keyframes.scss
@@ -12,10 +12,9 @@
 
 @keyframes marquee {
   0% {
-    transform: translate3d(calc(-25% + 20vw), 0, 0);
+    transform: translate(50%, 0);
   }
-
   100% {
-    transform: translate3d(calc(-50% + 20vw), 0, 0);
+    transform: translate(-50%, 0);
   }
 }
