improve logic for displaying messages

--- a/src/components/live-chat/live-chat.scss
+++ b/src/components/live-chat/live-chat.scss
@@ -72,6 +72,13 @@
         justify-content: center;
       }
 
+      .no-messages {
+        color: white;
+        text-align: center;
+        font-weight: bold;
+        font-size: 16px;
+      }
+
       .chat-bubble {
         color: white;
         display: flex;
