increase opacity of overlay

--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -177,7 +177,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: $translucentBlack;
+  background-color: $translucentBlack2;
   padding: 90px 20px;
 
   @include mobile {
