--- a/src/components/live-chat/live-chat.scss
+++ b/src/components/live-chat/live-chat.scss
@@ -112,6 +112,10 @@
               display: flex;
               align-items: center;
               justify-content: center;
+
+              .verified-icon {
+                margin: 4px;
+              }
             }
           }
 
